<resources>
    <string name="app_name">AhorroLibre</string>
    <string name="splash_screen_welcome">Bienvenido a</string>
    <string name="splash_screen_lema">Es fácil ahorrar con amigos!</string>

    <string name="no_tandas_message">Aun no tienes ninguna Tanda...</string>
    <string name="creat_tanda">Crea tu primer Tanda!</string>

    <string name="tel">(664)111-1638</string>
    <string name="sms">Mándanos un texto SMS</string>
    <string name="email">soporte@ahorrolibre.com</string>
    <string name="chat">Live Chat</string>


    <string name="navigation_drawer_open">Abrir menu de cajon</string>
    <string name="navigation_drawer_close">Cerrar menu de cajón</string>

    <string name="nav_drawer_tandas">Mis Tandas</string>
    <string name="nav_drawer_ahorros">Mis Ahorros</string>
    <string name="nav_drawer_create">Crear nueva Tanda</string>
    <string name="nav_drawer_account">Mi Cuenta</string>
    <string name="nav_drawer_soport_msg">Necesitas ayuda?</string>


    <string name="mensaje_chusco">Si no te gusta, cayese!... me la pelas</string>

    <string name="action_settings">Ajustes</string>
    <string name="action_logout">LogOff</string>
    <string name="action_refresh">refresh</string>

    <string name="TC_name">Nombre Tanda</string>
    <string name="TC_folio">B6969</string>
    <string name="TC_amount">$9,800</string>
    <string name="TC_currency">pesos</string>
    <string name="TC_payment">$200</string>


    <string name="TC_invite_msg_complete">empieza 19/feb, te tocaria en 13 dias</string>
    <string name="TC_invite_msg1">para recibir </string>
    <string name="TC_invite_msg2">$800 pesos</string>
    <string name="TC_invite_msg3">en 13 dias </string>
    <string name="TC_invite_msg4">el 19/feb</string>
    <string name="TC_invite_action">Unirme</string>

    <string name="TC_pending_msg_complete">empieza 19/feb, te tocará en 13 dias</string>
    <string name="TC_pending_msg1">para recibir </string>
    <string name="TC_pending_msg2">$800 pesos</string>
    <string name="TC_pending_msg3">en 13 dias </string>
    <string name="TC_pending_msg4">el 19/feb</string>
    <string name="TC_pending_action">Tu lugar reservado</string>

    <string name="TC_active_before_msg_complete">recibes en 13 dias, el 26/feb/2016</string>
    <string name="TC_active_before_msg1">recibirás </string>
    <string name="TC_active_before_msg2">$800 pesos</string>
    <string name="TC_active_before_msg3">en 13 dias </string>
    <string name="TC_active_before_msg4">el 19/feb</string>
    <string name="TC_active_before_action">Detalles</string>

    <string name="TC_active_after_msg_complete">Felicidades!, recibiste el 26/feb</string>
    <string name="TC_active_after_msg1">Felicidades! </string>
    <string name="TC_active_after_msg2">recibiste</string>
    <string name="TC_active_after_msg3">$800 pesos </string>
    <string name="TC_active_after_msg4">el 19/feb</string>
    <string name="TC_active_after_action">Detalles</string>

    <string name="TC_owe_msg_complete">El 5/feb/2016 recibiste $800 pesos</string>
    <string name="TC_owe_msg1">Recibiste $800 pesos</string>
    <string name="TC_owe_msg2">el 5/feb/2016</string>
    <string name="TC_owe_msg3">Aún Debes</string>
    <string name="TC_owe_msg4">$250</string>
    <string name="TC_owe_action">Aún debes $250 pesos</string>


    <string name="TC_finished_msg_complete">El 5/feb/2016 recibiste $800 pesos</string>
    <string name="TC_finished_msg1">El 5/feb/2016</string>
    <string name="TC_finished_msg2">recibiste $800 pesos</string>
    <string name="TC_finished_action">Sigue ahorrando</string>

    <string name="TC_status_invite">Estas invitado</string>
    <string name="TC_status_pending">En espera</string>
    <string name="TC_status_active">Activa</string>
    <string name="TC_status_owe">Debes</string>
    <string name="TC_status_finished">Terminó</string>
    <string name="title_activity_tanda_detail">TandaDetail</string>
    <string name="title_activity_settings">Ajustes</string>

</resources>
