<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tandas"
            android:icon="@drawable/ic_mis_tandas_24dp"
            android:title="@string/nav_drawer_tandas" />
        <item
            android:id="@+id/nav_crearnueva"
            android:icon="@drawable/ic_crear_tanda_24dp"
            android:title="@string/nav_drawer_create" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/nav_drawer_account" />

    </group>

    <item android:title="@string/nav_drawer_soport_msg">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_call_24dp"
                android:title="@string/tel" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email_24dp"
                android:title="@string/email" />
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_chat_24dp"
                android:title="@string/chat" />


        </menu>
    </item>

</menu>
