<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAlWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context="com.ahorrolibre.al01.MainActivity"-->
    <!--tools:showIn="@layout/app_bar_main"-->


    <LinearLayout
        android:id="@+id/linearLayout_welcome"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView_welcome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/splash_screen_welcome"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAlBlue"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageView_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/al_mainlogo"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RelativeLayout_create_new_tanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView_aun_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/text_padding"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/text_padding"
            android:text="@string/no_tandas_message"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorAlBlue"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/button_new_tanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/buttonshape"
            android:maxLines="2"
            android:minLines="1"
            android:padding="@dimen/text_padding"
            android:text="@string/creat_tanda"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorAlWhite"

            />




    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="Tienes dudas?"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAlBlue"
        android:textStyle="bold"
        />


</LinearLayout>